@@ -1,4 +1,5 @@
 0.07 - not yet released
+ - added select_and_wait()
  - moved the start_time variable into the base class
  - moved the handle_command up into the base class
  - escape backticks for option names, to allow crazy options
